--- a/TestingNewArch/Base.lproj/Main.storyboard
+++ b/TestingNewArch/Base.lproj/Main.storyboard
@@ -2093,13 +2093,13 @@
                                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 </view>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LIC-R6-zTK">
-                                                    <rect key="frame" x="20" y="16.666666666666671" width="86.666666666666671" height="41"/>
+                                                    <rect key="frame" x="20" y="6" width="86.666666666666671" height="41"/>
                                                     <fontDescription key="fontDescription" type="boldSystem" pointSize="34"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="y54-TY-Tnx">
-                                                    <rect key="frame" x="287.66666666666669" y="28" width="42" height="20.666666666666671"/>
+                                                    <rect key="frame" x="287.66666666666669" y="63.999999999999993" width="42" height="20.666666666666664"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
@@ -2108,14 +2108,14 @@
                                         </view>
                                         <constraints>
                                             <constraint firstItem="LIC-R6-zTK" firstAttribute="leading" secondItem="PV3-D2-8dR" secondAttribute="leadingMargin" constant="12" id="FNk-M3-qyb"/>
-                                            <constraint firstItem="LIC-R6-zTK" firstAttribute="centerY" secondItem="PV3-D2-8dR" secondAttribute="centerY" id="Mss-gW-muW"/>
                                             <constraint firstItem="BPH-De-eyc" firstAttribute="leading" secondItem="PV3-D2-8dR" secondAttribute="leading" id="NqQ-at-pAW"/>
+                                            <constraint firstItem="LIC-R6-zTK" firstAttribute="top" secondItem="PV3-D2-8dR" secondAttribute="top" constant="6" id="P1P-sV-lTq"/>
                                             <constraint firstAttribute="trailing" secondItem="BPH-De-eyc" secondAttribute="trailing" id="Z2t-6V-4MH"/>
                                             <constraint firstItem="y54-TY-Tnx" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="LIC-R6-zTK" secondAttribute="trailing" constant="12" id="akM-7r-bnI"/>
                                             <constraint firstAttribute="trailingMargin" secondItem="y54-TY-Tnx" secondAttribute="trailing" constant="12" id="edP-Hw-nEH"/>
                                             <constraint firstAttribute="bottom" secondItem="BPH-De-eyc" secondAttribute="bottom" id="uBM-ch-Fhv"/>
                                             <constraint firstItem="BPH-De-eyc" firstAttribute="top" secondItem="PV3-D2-8dR" secondAttribute="top" id="uVD-kk-Z6T"/>
-                                            <constraint firstItem="y54-TY-Tnx" firstAttribute="centerY" secondItem="PV3-D2-8dR" secondAttribute="centerY" id="zOY-72-XLs"/>
+                                            <constraint firstItem="y54-TY-Tnx" firstAttribute="top" secondItem="PV3-D2-8dR" secondAttribute="topMargin" constant="12" id="uon-5u-7Jx"/>
                                         </constraints>
                                         <connections>
                                             <outlet property="backView" destination="BPH-De-eyc" id="wTZ-zV-vB2"/>
@@ -2380,7 +2380,7 @@
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <fontDescription key="fontDescription" type="boldSystem" pointSize="34"/>
-                                        <textInputTraits key="textInputTraits" autocapitalizationType="words" textContentType="name"/>
+                                        <textInputTraits key="textInputTraits" textContentType="name"/>
                                     </textField>
                                 </subviews>
                                 <color key="backgroundColor" red="0.60387962740000001" green="0.75892291639999998" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
